--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
+    "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.1.5",
+    "framer-motion": "^12.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.5",
+    "typewriter-effect": "^2.22.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
